<?xml version="1.0"?>
<package format="3">
  <name>ras598_assignment_2</name>
  <version>0.0.1</version>
  <description>RAS 598 Assignment 2 Motion Planning</description>
  <maintainer email="vamshikrishnagadde9999@gmail.com">VAMSHIKRISHNA GADDE</maintainer>
  <license>MIT</license>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>example_interfaces</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>
  <exec_depend>nav2_lifecycle_manager</exec_depend>
  <buildtool_depend>ament_python</buildtool_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
